--- a/fdm/.classpath
+++ b/fdm/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="lib/jgrapht-ext-0.9.1-uber.jar"/>
+	<classpathentry kind="lib" path="lib/blueprints-core-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
