--- a/fdm/.classpath
+++ b/fdm/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="lib/jgrapht-ext-0.9.1-uber.jar"/>
 	<classpathentry kind="lib" path="lib/blueprints-core-2.6.0.jar"/>
 	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
+	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
