--- a/fdm/.classpath
+++ b/fdm/.classpath
@@ -4,7 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jgrapht-ext-0.9.1-uber.jar"/>
 	<classpathentry kind="lib" path="lib/blueprints-core-2.6.0.jar"/>
-	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/gs-core-1.3.jar" sourcepath="lib/gs-core-1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/fdm/lib/gs-core-1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/gs-core-1.3-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/gs-core-1.3-sources.jar"/>
