--- a/fdm/.classpath
+++ b/fdm/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="lib" path="lib/gs-core-1.3-sources.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/gs-ui-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/xuggle-xuggler-5.4.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
